--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,7 @@
+.App {
+  position: relative;
+}
+
 .App-header {
   display: flex;
   flex-flow: column nowrap;
@@ -24,6 +28,7 @@
 
 .App-container {
   display: flex;
+  position: relative;
   flex-flow: row wrap;
   align-items: flex-start;
   padding: 12px 16px;
@@ -60,7 +65,7 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  z-index: 5;
+  z-index: 2;
 }
 
 .App-action-button {
